test for baseurl fix

--- a/_includes/post-nav.html
+++ b/_includes/post-nav.html
@@ -12,8 +12,8 @@
   </div>
 
   <div class="nav-side-icon">
-    <a href="{{ site.url }}" class="fa fa-home"></a>
-    <div class="description"><a href="{{ site.url }}">Home</a>
+    <a href="{{ site.url }}{{ site.baseurl }}" class="fa fa-home"></a>
+    <div class="description"><a href="{{ site.url }}{{ site.baseurl }}">Home</a>
     </div>
   </div>
 
