--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: default
       {% endif %}
     <div class="post-container card-effect">
       <div class="post-meta">{{ post.date | date: "%-d %b" }}</div>
-        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
         <p class="post-summary">{{ post.excerpt }}</p>
     </div>
     {% if forloop.last %}
