--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" rel="stylesheet"></script>
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Fredericka+the+Great|Merriweather|Roboto+Slab|Source+Sans+Pro|Special+Elite" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="/js/jquery-stick-sidenav.js" rel="stylesheet" type="text/javascript"></script>
+  <script src="{{ site.url }}{{ site.baseurl }}/js/jquery-stick-sidenav.js" rel="stylesheet" type="text/javascript"></script>
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   {% if jekyll.environment == 'production' and site.google_analytics %}
