--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include header.html %}
-    <main class="page-content" aria-label="Content">
+    <main class="page-wrapper-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
       </div>
