--- a/_sass/helpers/_variables.scss
+++ b/_sass/helpers/_variables.scss
@@ -3,6 +3,7 @@ $bgcolor: #e3e3e3;
 $bannerblue: #6095E3;
 $darkgrey: #333;
 $lightgrey: DarkGrey;
+$visitedlink: #939192;
 $footergrey: #393A40;
 $offwhite: #f5f5f5;
 $shadow: (0 4px 16px 0 rgba(#000,.4), 0 6px 30px 0 rgba(#000,.37));
