--- a/css/main.scss
+++ b/css/main.scss
@@ -139,6 +139,19 @@ p {
     text-align: justify;
   }
 }
+.page-content {
+  margin-top: 3rem;
+  & a {
+    color: $bannerblue;
+    font-weight: bold;
+    text-decoration: none;
+    border-bottom: 2px dotted $bannerblue;
+  }
+  & a:visited {
+    color: $visitedlink;
+    border-bottom: $visitedlink;
+  }
+}
 .post-container:last-child {
   margin-bottom: 1.5rem;
 }
