added under construction banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
   {% include head.html %}
   <body>
+    <img id="img-banner-corner" src="{{ site.baseurl }}/img/websitebanner-red.png" alt="banner: under construction">
     {% include header.html %}
     <main class="page-wrapper-content" aria-label="Content">
       <div class="wrapper">
