--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Kenrick">
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-  <link href="/img/logo.png" rel="shortcut icon" type="image/png">
+  <link href="{{ site.baseurl }}/img/logo.png" rel="shortcut icon" type="image/png">
   <link rel="stylesheet" href="{{ "/css/normalize.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/css/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
@@ -12,7 +12,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" rel="stylesheet"></script>
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Fredericka+the+Great|Merriweather|Roboto+Slab|Source+Sans+Pro|Special+Elite" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="{{ site.url }}{{ site.baseurl }}/js/jquery-stick-sidenav.js" rel="stylesheet" type="text/javascript"></script>
+  <script src="{{ site.baseurl }}/js/jquery-stick-sidenav.js" rel="stylesheet" type="text/javascript"></script>
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   {% if jekyll.environment == 'production' and site.google_analytics %}
