--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@
 }
 body {
   background-color: $bgcolor;
-  font-family: 'Merriweather', serif;
+  font-family: 'Merriweather', Verdana, sans-serif;
 }
 a:link {
   color: inherit;
@@ -234,6 +234,9 @@ footer {
 /************************* LARGE BREAKPOINT MEDIA QUERY ***********************/
 @media only screen and (min-width: $bp-large) {
 
+  body {
+    font-family: 'Merriweather', Palatino, Georgia, serif;
+  }
   #mobile-nav {
     display: none;
   }
