--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
       {{ content }}
     </div>
   </article>
-  <div class="reference postit">test
+  <div class="reference postit">
     <ol>
     {% for word_def in page.vocab %}
       {% for item in word_def %}
