--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <a href="javascript:void(0)" class="close-button">&times</a>
     <div class="container-links">
       <a href="{{ site.url }}{{ site.baseurl }}" class="fa fa-home">   Home</a>
-      <a href="" class="fa fa-language">   Vocabulary</a>
-      <a href="" class="fa fa-buysellads">   about</a>
+      <a href="{{ site.baseurl }}/vocabulary" class="fa fa-language">   Vocabulary</a>
+      <a href="{{ site.baseurl }}/about" class="fa fa-buysellads">   about</a>
     </div>
   </nav>
   <nav id="mobile-nav">
