--- a/css/main.scss
+++ b/css/main.scss
@@ -13,13 +13,13 @@
 }
 body {
   background-color: $bgcolor;
-  font-family: 'Merriweather', Verdana, sans-serif;
+  font-family: 'Droid Serif', Palatino, Georgia, serif;
 }
 a:link {
-  color: inherit;
+  color: $bannerblue;
 }
 a:visited {
-  color: $darkgrey;
+  color: $visitedlink;
 }
 h1 {
   font-size: 1.5rem; // this doesn't seem to work calc(1.5rem + (3 - 1.5) * ((100vw - 300px) / (1600 - 300)));
@@ -58,7 +58,7 @@ sup {
 }
 #nav-side {
   width: 10rem;
-  background-color: $footergrey;
+  background-color: $offwhite;
   height: 100%;
   position: fixed;
   top: 0;
@@ -69,13 +69,12 @@ sup {
   box-shadow: $shadow;
   padding: 1rem;
   & a {
-    color: $bannerblue;
+    color: $darkgrey;
     text-decoration: none;
     padding: 0.5rem;
   }
 }
 .close-button {
-  color: $offwhite !important;
   position: absolute;
   top: 0;
   right: 1rem;
@@ -84,7 +83,7 @@ sup {
 }
 .container-links {
   margin-top: 2rem;
-  border-top: 2px solid $bannerblue;
+  border-top: 2px solid $darkgrey;
 }
 /***************************** END MOBILE NAV BAR *****************************/
 .page-heading, .page-title {
@@ -160,15 +159,15 @@ sup {
 }
 .post-meta {
   position: absolute;
-  top: -1.5rem;
-  left: -1.5rem;
+  top: -1rem;
+  left: -1rem;
   padding: 0.5rem;
   background-color: $bannerblue;
   opacity: 0.9;
   font-weight: bold;
   width: 3.5rem;
   height: 3.5rem;
-  border: 2px solid $lightgrey;
+  border: 2px dotted $lightgrey;
   border-radius: 100%;
   text-align: center;
   //box-shadow: $shadow;
@@ -219,6 +218,33 @@ sup {
   margin-top: 2rem;
   & ul li {
     list-style-type: none;
+  }
+}
+.vocabulary {
+  position: relative;
+  border: 2px solid $lightgrey;
+  border-radius: 0.5rem;
+  top: 1.5rem;
+  & ul {
+    list-style-type: none;
+    margin-top: 2rem;
+    padding: 1rem;
+    & li {
+      padding: 0.25rem;
+    }
+  }
+  & h2 {
+    color: $darkgrey;
+    position: absolute;
+    top: -1.75rem;
+    left: 30%;
+    background-color: $bgcolor;
+    text-align: center;
+    border: 2px solid $lightgrey;
+    border-radius: 0.5rem;
+    width: 10rem;
+    display: block;
+    margin: auto;
   }
 }
 /*********************************** POST PAGE ********************************/
@@ -279,11 +305,7 @@ footer {
     list-style-type: none;
   }
   & a {
-    color: $offwhite;
     text-decoration: none;
-    &:visited {
-      color: $offwhite;
-    }
   }
 }
 .icon {
@@ -298,12 +320,11 @@ footer {
     padding: 0.5rem;
   }
 }
-
 /************************* LARGE BREAKPOINT MEDIA QUERY ***********************/
 @media only screen and (min-width: $bp-large) {
 
   body {
-    font-family: 'Merriweather', Palatino, Georgia, serif;
+    font-family: 'Droid Serif', Palatino, Georgia, serif;
   }
   .envelope, .reference {
     display: block;
@@ -398,7 +419,7 @@ footer {
     flex: 0 1 auto;
     margin: 1rem;
   }
-  .vocabulary {
+  /*.vocabulary {
     position: relative;
     border: 2px solid $lightgrey;
     border-radius: 0.5rem;
@@ -424,7 +445,7 @@ footer {
       display: block;
       margin: auto;
     }
-  }
+  }*/
   .card-effect {
       box-shadow: $ltshadow;
   }
@@ -454,12 +475,15 @@ footer {
     transform: rotate(-3deg);
   }
   .post-content * {
-    font-family: 'Special Elite', serif;
+    font-family: 'Droid Serif', Palatino, Georgia, serif;
     line-height: 2.5rem;
     font-size: 1.5rem;
     text-indent: 1.5rem;
     & h1 {
       text-decoration: underline;
+    }
+    & strong {
+      color: $bannerblue;
     }
   }
   .envelope {
