updated js to fix reload errors on mobile and updated mobile css styling

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,7 +6,7 @@ layout: default
   <header class="page-header">
     <h1 class="page-title">{{ page.title | escape }}</h1>
   </header>
-  <div class="page-additional">
+  <div class="page-additional post-content corner-shadow justify">
     {{ content }}
   </div>
 </article>
