--- a/_layouts/vocab.html
+++ b/_layouts/vocab.html
@@ -6,7 +6,7 @@ layout: default
   <header class="page-header">
     <h1 class="page-title">{{ page.title | escape }}</h1>
   </header>
-  <div class="page-additional">
+  <div class="page-additional post-content corner-shadow">
     <ul>
       {% assign word_length = 0 %}
       {% if word_length < 50 %}
@@ -21,4 +21,5 @@ layout: default
       {% endif %}
     </ul>
   </div>
+
 </article>
