removed the javascript to move post to left

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,8 +38,8 @@ $(function() {
   $(window).on('resize', function() {
     $('.nav-post').kjsticky({footerID: ".site-footer", mainID: ".post"});
   });
-  $('.clicknshow').on('click', function(){
-    $(this).toggleClass('show-under');
-  });
+  //$('.clicknshow').on('click', function(){
+  //  $(this).toggleClass('show-under');
+  //});
 });
 </script>
